--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "better-set",
+  "name": "@tenolib/map",
   "version": "1.0.0-beta.0",
-  "description": "A better set lib for JavaScript",
+  "description": "A better map lib for JavaScript",
   "main": "dist/index.js",
   "scripts": {
     "tsc": "tsc",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AbbottMc/better-set.git"
+    "url": "git+https://github.com/AbbottMc/tenolib-map.git"
   },
   "files": [
     "dist",
@@ -28,9 +28,9 @@
   "author": "QianShanyao",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AbbottMc/better-set/issues"
+    "url": "https://github.com/AbbottMc/tenolib-map/issues"
   },
-  "homepage": "https://github.com/AbbottMc/better-set#readme",
+  "homepage": "https://github.com/AbbottMc/tenolib-map#readme",
   "devDependencies": {
     "typescript": "^5.8.3"
   }
